# Moqayyem

./: .gitignore  README.md  pyproject.toml
examples/: basic_evaluation.py  integrated_evaluation.py
src/config/: config.py  evaluation_config.yaml
src/data/: data_loader.py  dataset.py  types.py
src/evaluation/: generation_evaluator.py  retrieval_evaluator.py  system_evaluator.py
src/metrics/: __init__.py  arabic_metrics.py  generation_metrics.py  performance_metrics.py  retrieval_metrics.py  robustness_metrics.py
src/pipeline/: evaluation_pipeline.py
src/reporting/: report_generator.py  visualizations.py
tests/: test_evaluators.py  test_generation_metrics.py  test_retrieval_metrics.py
